log/build_2026-01-20_10-33-39/assignment1_rt_py/stderr.log
  File "/home/ubuntu/ros_workspace/install/assignment1_rt_py/lib/python3.12/site-packages/assignment1_rt_py/two_turtles.py", line 112
    elif self.valid_choice
                          ^
SyntaxError: expected ':'

